--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -30,6 +30,16 @@
         right: .252632rem!important;
     }
 
+    .img_text p {
+        position: absolute;
+        bottom: .121053rem;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        font-size: .136842rem;
+
+    }
+
 
     .w465 h1 {
         font-size: 16px;
