--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -8,9 +8,12 @@
         line-height: 15px!important;
     }
     .navbar .container .logo {    /*logo*/
-        font-size: 26px;
-        color: #19c3ad;
+        margin: -3px 0 0 0;
     }
+    .navbar .container .logo img {    /*logo*/
+        height: 26px;
+    }
+
     .nav_li li {
         font-size: 14px;
         color: #555;
@@ -146,8 +149,8 @@
         margin: 26px 0;
     }
     .about img {
-        width: 99%;
-        height: 250px;
+        width: 9.2rem;
+        height: 7rem;
         border-radius: 3px;
     }
     .about .content_r {
@@ -304,20 +307,20 @@
     }
     .contact_l h4 {
         font-size: 22px;
-        margin: 27px 0;
+
     }
     .contact_l p {
         /* width: 300px; */
         font-size: 14px;
         line-height: 22px;
     }
-    .tel {
-        margin: 22px 0;
-    }
     .map {
         float: none;
     }
 
+    .map img {
+        margin-top: 10px;
+    }
     .copyright {
         height: 130px;
     }
