--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,13 @@ h1,h2,h3,h4 {
     font-weight: normal!important;
 }
 
+button {
+    outline: none!important;
+}
+:focus{
+    outline: 0;     /*去除点击边框*/
+}
+
 .yide {
     color: #555;
 }
@@ -70,8 +77,7 @@ h1,h2,h3,h4 {
     width: .189474rem!important;
     height: .189474rem!important;
     border-radius: 50%;
-    background-color: #9d9a93;
-
+    background-color: rgba(110,110,110,.35);
 }
 .swiper-button-prev {
     left: .252632rem!important;
@@ -126,6 +132,58 @@ h1,h2,h3,h4 {
 
 
 
+.img_text2 {
+    position: absolute;
+    top: 53%;
+    transform: translateY(-50%);
+    right: 1.578947rem
+}
+.img_text2 li img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: .122rem;
+    width: .5526rem;
+    height: .48421rem;
+
+}
+
+.img_text2 h1 {
+    font-size: .42rem;
+    color: #fff;
+    text-align: center;
+}
+.img_text2 h2 {
+    font-size: .19rem;
+    position: absolute;
+    top: .61rem;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    width: 100%;
+    text-align: center;
+}
+.img_text2 p {
+    position: absolute;
+    bottom: .201053rem;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: .126842rem;
+
+}
+.img_text2 ul {
+    display: flex;
+    /*width: 3.473684rem;*/
+    height: 1.110526rem;
+}
+.img_text2 ul li {
+    /*margin-top: .421rem;*/
+    position: relative;
+    flex: 1;
+}
+
+
 .nav_pc {
     /* display: flex; */
     color: #fff;
@@ -172,7 +230,7 @@ h1,h2,h3,h4 {
 
 .w465 div {
     position: absolute;
-    left: -0.447368rem;
+    left: -0.557368rem;
     top: 50%;
     transform: translateY(-50%);
 }
