--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -87,6 +87,54 @@
 
 
 
+
+
+    .img_text2 li img {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: .533rem;
+        width: 1.12rem;
+        height: .98rem;
+
+    }
+
+    .img_text2 h1 {
+        font-size: .64rem;
+        color: #fff;
+        text-align: center;
+    }
+    .img_text2 h2 {
+        font-size: .42rem;
+        position: absolute;
+        top: .85rem;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        width: 100%;
+        text-align: center;
+    }
+    .img_text2 p {
+        position: absolute;
+        bottom: .501053rem;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        font-size: 12px;
+
+    }
+    .img_text2 ul {
+        display: flex;
+        width: 5.3rem;
+        height: 2.110526rem;
+    }
+    .img_text2 ul li {
+    }
+
+
+
+
+
     .w465 {
         padding: .131579rem .157895rem;
         box-sizing: border-box;
