--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,8 +88,7 @@ button {
 /* end */
 .img_text {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 37%;
     left: 1.578947rem
 }
 .img_text li img {
@@ -133,56 +132,57 @@ button {
 
 
 .img_text2 {
-    position: absolute;
-    top: 53%;
-    transform: translateY(-50%);
-    right: 1.578947rem
-}
+     position: absolute;
+     top: 40%;
+     right: 1.578947rem;
+     width: 3.56rem;
+ }
 .img_text2 li img {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: .122rem;
+    bottom: -1.15rem;
     width: .5526rem;
     height: .48421rem;
 
 }
 
 .img_text2 h1 {
-    font-size: .42rem;
+    box-sizing: border-box;
+    padding: 0 5px;
+    font-size: .3rem;
     color: #fff;
     text-align: center;
+    margin: 0!important;
 }
 .img_text2 h2 {
-    font-size: .19rem;
+    font-size: .16rem;
     position: absolute;
-    top: .61rem;
+    top: 0.553rem;
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
     width: 100%;
     text-align: center;
+    margin: 0!important;
 }
 .img_text2 p {
     position: absolute;
-    bottom: .201053rem;
+    bottom: -1.016rem;
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
-    font-size: .126842rem;
-
+    font-size: .136842rem;
+    margin: 0!important;
 }
 .img_text2 ul {
     display: flex;
-    /*width: 3.473684rem;*/
-    height: 1.110526rem;
 }
 .img_text2 ul li {
     /*margin-top: .421rem;*/
     position: relative;
     flex: 1;
 }
-
 
 .nav_pc {
     /* display: flex; */
