--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -27,7 +27,7 @@
         /*overflow: hidden;*/
     }
     .swiper img {
-        width: 14rem;
+        width: 18.1rem;
         height: 7.7rem;
     }
     .swiper-container {
@@ -87,46 +87,39 @@
 
 
 
-
+    .img_text2 {
+        width: 5.86rem;
+    }
 
     .img_text2 li img {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: .533rem;
+        /*position: absolute;*/
+        /*left: 50%;*/
+        /*transform: translateX(-50%);*/
+        bottom: -1.92rem;
         width: 1.12rem;
         height: .98rem;
 
     }
 
     .img_text2 h1 {
-        font-size: .64rem;
-        color: #fff;
-        text-align: center;
+        font-size: 0.5rem;
+        /*color: #fff;*/
+        /*text-align: center;*/
     }
     .img_text2 h2 {
-        font-size: .42rem;
-        position: absolute;
-        top: .85rem;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #fff;
-        width: 100%;
-        text-align: center;
-    }
-    .img_text2 p {
-        position: absolute;
-        bottom: .501053rem;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #fff;
-        font-size: 12px;
+        top: 0.78rem;
+        font-size: 0.4rem;
 
     }
+    .img_text2 p {
+        bottom: -1.68rem;
+        width: 40px;
+        text-align: center;
+    }
     .img_text2 ul {
-        display: flex;
-        width: 5.3rem;
-        height: 2.110526rem;
+        /*display: flex;*/
+        /*width: 5.3rem;*/
+        /*height: 2.110526rem;*/
     }
     .img_text2 ul li {
     }
