--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -115,6 +115,7 @@
         bottom: -1.68rem;
         width: 40px;
         text-align: center;
+        font-size: 12px;
     }
     .img_text2 ul {
         /*display: flex;*/
